--- a/service-parent/ticket-service/pom.xml
+++ b/service-parent/ticket-service/pom.xml
@@ -1,38 +1,42 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.example</groupId>
-    <artifactId>service-parent</artifactId>
-    <version>10.0.1</version>
-  </parent>
-  <groupId>com.example</groupId>
-  <artifactId>ticket-service</artifactId>
-  <version>10.0.1</version>
-  <name>ticket-service</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-<!--     <dependency> -->
-<!--     	<groupId>org.springframework.boot</groupId> -->
-<!--     	<artifactId>spring-boot-starter-data-cassandra</artifactId> -->
-<!--     </dependency> -->
-<!-- <dependency> -->
-<!--     <groupId>com.codahale.metrics</groupId> -->
-<!--     <artifactId>metrics-core</artifactId> -->
-<!--     <version>3.0.2</version> -->
-<!-- </dependency> -->
-    
-  </dependencies>
-	
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.example</groupId>
+		<artifactId>service-parent</artifactId>
+		<version>10.0.1</version>
+	</parent>
+	<groupId>com.example</groupId>
+	<artifactId>ticket-service</artifactId>
+	<version>10.0.1</version>
+	<name>ticket-service</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-data-jpa</artifactId> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId> spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Hoxton.SR6</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
+
