--- a/service-parent/ticket.service-app/pom.xml
+++ b/service-parent/ticket.service-app/pom.xml
@@ -8,54 +8,39 @@
 		<groupId>com.example</groupId>
 		<artifactId>service-parent</artifactId>
 		<version>10.0.1</version>
-		<relativePath />
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>account-service</artifactId>
+	<artifactId>ticket.service-app</artifactId>
 	<version>10.0.1</version>
-	<name>account-service</name>
+	<name>ticket.service-app</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId> spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>
+				spring-boot-starter-data-elasticsearch
+			</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId> spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-
-
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>common-service-app</artifactId>
 			<version>${project.version} </version>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Hoxton.SR6</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
