--- a/service-parent/common-service-app/pom.xml
+++ b/service-parent/common-service-app/pom.xml
@@ -8,34 +8,23 @@
     <version>10.0.1</version>
   </parent>
   <groupId>com.example</groupId>
-  <artifactId>eureka-server</artifactId>
+  <artifactId>common-service-app</artifactId>
   <version>10.0.1</version>
-  <name>eureka-server</name>
+  <name>common-service-app</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-
-    <dependency>
+      <dependency>
     	<groupId>org.springframework.cloud</groupId>
-    	<artifactId> spring-cloud-starter-netflix-eureka-server</artifactId>
+    	<artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
-<!--     		<dependency> -->
-<!-- 			<groupId>org.springframework.cloud</groupId> -->
-<!-- 			<artifactId>spring-cloud-starter-config</artifactId> -->
-<!-- 		</dependency> -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>org.springframework.cloud</groupId>
-  			<artifactId>spring-cloud-dependencies</artifactId>
-<!--   			<version>Hoxton.SR6</version> -->
-				<version>Hoxton.RELEASE</version> 
-  			<type>pom</type>
-  			<scope>import</scope>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
 </project>
