--- a/service-parent/config-server/src/main/resources/microservice/ticket-service.yml
+++ b/service-parent/config-server/src/main/resources/microservice/ticket-service.yml
@@ -17,7 +17,14 @@ spring:
       database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
       hibernate:
          ddl-auto: update
-  
+   rabbitmq:
+      username: celal
+      password: celal
+   cloud:
+      stream:
+         bindings:
+            output:
+               destination: msqueue
   
   
   
