--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -1,9 +1,11 @@
+#    docker-compose -f docker-compose.yml up -d
 version: '3.1'
 services:
-   cassandra:
-      image: cassandra
-      ports:
-         - '9042:9042'
+#    cassandra:
+#       image: cassandra
+#       ports:
+#          - '9042:9042'
+
         
    mysql:
       image: mysql
@@ -14,7 +16,8 @@ services:
          - '3306:3306'
          
    elasticsearch:
-      image: elasticsearch:7.4.0
+      image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
+      #image: elasticsearch:7.4.0
       ports:
          - 9200:9200
          - 9300:9300
