--- a/service-parent/notification-service-app/pom.xml
+++ b/service-parent/notification-service-app/pom.xml
@@ -18,7 +18,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId> spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.springframework.boot</groupId> -->
 		<!-- <artifactId>spring-boot-starter-amqp</artifactId> -->
