--- a/service-parent/account-service/pom.xml
+++ b/service-parent/account-service/pom.xml
@@ -40,7 +40,10 @@
 			<artifactId> spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>common-service-app</artifactId>
