--- a/service-parent/config-server/src/main/resources/microservice/account-service.yml
+++ b/service-parent/config-server/src/main/resources/microservice/account-service.yml
@@ -7,6 +7,8 @@ eureka:
 spring:
    application:
       name: Account-Service
+   zipkin:
+      base-url: http://localhost:9411/
    datasource:
       url: jdbc:postgresql://localhost:5432/Okul
       username: postgres
