--- a/service-parent/config-server/src/main/resources/microservice/eureka-server.yml
+++ b/service-parent/config-server/src/main/resources/microservice/eureka-server.yml
@@ -4,7 +4,8 @@ server:
 spring:
    application:
       name: Eureka-Server
-      
+   zipkin:
+      base-url: http://localhost:9411/   
 eureka:
    client:
       serviceUrl:
