--- a/service-parent/config-server/src/main/resources/microservice/ticket-service.yml
+++ b/service-parent/config-server/src/main/resources/microservice/ticket-service.yml
@@ -8,6 +8,8 @@ eureka:
 spring:
    application:
       name: ticket-service
+   zipkin:
+      base-url: http://localhost:9411/
    datasource:
       url: jdbc:mysql://localhost:3306/microserviceapp
       username: root
