--- a/service-parent/eureka-server/pom.xml
+++ b/service-parent/eureka-server/pom.xml
@@ -21,10 +21,15 @@
     	<groupId>org.springframework.cloud</groupId>
     	<artifactId> spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
+
 <!--     		<dependency> -->
 <!-- 			<groupId>org.springframework.cloud</groupId> -->
 <!-- 			<artifactId>spring-cloud-starter-config</artifactId> -->
 <!-- 		</dependency> -->
+  	<dependency>
+  		<groupId>org.springframework.cloud</groupId>
+  		<artifactId>spring-cloud-starter-zipkin</artifactId>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
