--- a/service-parent/notification-service-app/pom.xml
+++ b/service-parent/notification-service-app/pom.xml
@@ -40,7 +40,7 @@
 			<groupId>com.example</groupId>
 			<artifactId>common-service-app</artifactId>
 			<version>${project.version} </version>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
@@ -62,6 +62,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-test-support</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
