--- a/service-parent/ticket.service-app/pom.xml
+++ b/service-parent/ticket.service-app/pom.xml
@@ -37,7 +37,7 @@
 				spring-boot-starter-data-elasticsearch
 			</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
@@ -64,6 +64,10 @@
 			<groupId>com.example</groupId>
 			<artifactId>common-service-app</artifactId>
 			<version>${project.version} </version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 </project>
